# Power-Tanks

./: Features
power_tank/: Ball.cpp  Ball.h  CMakeLists.txt  DebugMenu.cpp  DebugMenu.h  Enemies.cpp  Enemies.h  EnemyGotHit.cpp  EnemyGotHit.h  GameApp.cpp  GameApp.h  GameConfigration.cpp  GameConfigration.h  Gun.cpp  Gun.h  LevelCounter.cpp  PanelContext.h  PanelView.cpp  PanelView.h  Player.cpp  Player.h  PlayerKillSound.cpp  PlayerKillSound.h  SharedContext.h  ShowBallInfo.cpp  ShowBallInfo.h  SignalDefinitions.h  SignalSystem.cpp  SignalSystem.h  Window.h  main.cpp
power_tank/boid_manager/: BoidFactory.h  CollisionManager.cpp  CollisionManager.h  IBoid.h  SteeringManager.cpp  SteeringManager.h
power_tank/boids/: Boid.cpp  Boid.h  DumbEnemy.cpp  DumbEnemy.h  IBoid.cpp  IBoid.h  PerlinNoise.hpp
power_tank/editor/: Editor.cpp  Editor.h
power_tank/gun/: IGun.h
power_tank/imgui/: imconfig.h
power_tank/libs/: Timer.cpp  Timer.h
power_tank/menus/: BaseMenu.cpp  BaseMenu.h  DebugMenu.cpp  DebugMenu.h  LevelUpMenu.cpp  LevelUpMenu.h  PanelView.cpp  PanelView.h
power_tank/particles/: ParticleSystem.cpp  ParticleSystem.h
power_tank/sound/: SoundMgr.cpp  SoundMgr.h
power_tank/utils/: FontMgr.cpp  FontMgr.h  LevelCounter.cpp  LevelCounter.h  ProgressBar.cpp  ProgressBar.h  ResourceMgr.cpp  ResourceMgr.h  SignalSystem.h  SimpleXmlParser.cpp  SimpleXmlParser.h  Utils.hpp
power_tank/views/: BoidsExampleView.cpp  BoidsExampleView.h  DefaultView.cpp  DefaultView.h  IView.h  LevelUpView.cpp  LevelUpView.h  PowerTankView.cpp  PowerTankView.h  TestView.cpp  (+1 more)
(+36 files in other folders)
